--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
  </html>
 
 <div class="container">
-  <h1>Original Coast Clothing</h1>
+  <h1>commit 2 </h1>
   <img src="/logo.png" />
   <p class="lead">
     We’re open 7 days, so start your shopping experience now!
